Fix indicator visibility for bubble state nav when invisible page gets displayed

--- a/prototype/navigation/bubble-state/bubblestateNavigationProjector.css
+++ b/prototype/navigation/bubble-state/bubblestateNavigationProjector.css
@@ -150,6 +150,6 @@
     content: url("../icons/simpleform.svg");
 }
 
-.bubble-state-nav .invisiblePage .indicator {
+.invisiblePage .bubble-state-nav .indicator {
     display: none;
 }
